# app

./: .gitignore  .pylintrc  Dockerfile  Pipfile  README.md  app.py  db.sqlite3  pyproject.toml
.github/workflows/: build.yml  pipeline.yml  pull_request.yml  release.yml
app/: settings.py  urls.py
static/: webservice.css
templates/: base.html  index.html  thanks.html
templates/webservice/: base.html  index.html
webservice/: forms.py  models.py  views.py
webservice/migrations/: 0001_initial.py
