[tool.poetry]
name = "app"
version = "0.0.0"
description = ""
authors = ["Rohan Sobha <r.r.sobha@student.tudelft.nl>"]
readme = "README.md"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"

[[tool.poetry.source]]
name = "test"
url = "https://test.pypi.org/simple"
default = false
secondary = true


[tool.poetry.dependencies]
python = "^3.8"
remlaverlib = {version = "^0.1.1", source = "test"}
python-dotenv = "^1.0.0"
requests = "^2.30.0"
flask = "^2.3.2"
Flask-WTF = "^1.1.1"
WTForms = "^3.0.1"

[tool.poetry.dev-dependencies]
pylint = "^2.2.12"
dslinter = "2.0.9"



[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
