[tool.poetry]
name = "app"
version = "0.0.0"
description = "This is the Web app serving the restaurant reviews and its validator."
authors = ["Rohan Sobha <r.r.sobha@student.tudelft.nl>"]
readme = "README.md"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"

[[tool.poetry.source]]
name = "test"
url = "https://test.pypi.org/simple"
priority = "explicit"


[[tool.poetry.source]]
name = "PyPI"
priority = "default"

[tool.poetry.dependencies]
python = "^3.10"
remlaverlib = {version = "^2.0.0", source = "test"}
python-dotenv = "^1.0.0"
requests = "^2.30.0"
flask = "^2.3.2"
Flask-WTF = "^1.1.1"
WTForms = "^3.0.1"

[tool.poetry.dev-dependencies]
pylint = "^2.2.12"
dslinter = "2.0.9"



[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
